[gd_scene load_steps=4 format=3 uid="uid://chje7aukkghdi"]

[ext_resource type="Script" path="res://Scripts/Scenes/IconAndTextButton.gd" id="1_yljhl"]
[ext_resource type="Resource" uid="uid://dg6hv4y6cteq5" path="res://Resources/LevelStyle.tres" id="2_2tfby"]
[ext_resource type="Texture2D" uid="uid://c0ncfqae3wbu6" path="res://Graphics/Icons/ArrowUp.png" id="3_djuxb"]

[node name="IconAndTextButton" type="MarginContainer"]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(200, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 105.0
grow_horizontal = 2
script = ExtResource("1_yljhl")
Style = ExtResource("2_2tfby")
Icon = ExtResource("3_djuxb")
Text = "Home"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_djuxb")

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Home
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
